objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delayed_Launch_Date__c</fullName>
        <label>Delayed Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_Not_Launch_Date__c</fullName>
        <label>Did Not Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Anchor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Bill_to_Country__c</fullName>
        <description>Billing Country</description>
        <label>Bill to Country</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Bundle_Type__c</fullName>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Bundle_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Cancelled_Qty__c</fullName>
        <description>Qty of cancelled Products</description>
        <label>Cancelled Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Fee__c</fullName>
        <description>Fee member will pay during consult visit</description>
        <label>Consult Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_End_Date__c</fullName>
        <description>End date of the Opportunity Line</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>PPPM</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Case Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Net_ARR__c</fullName>
        <label>Net ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Opportunity_Line_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Line_Item_Num_Product_Code__c</fullName>
        <label>Line Item Num/Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_With_PG_Bookings_Total_USGH__c</fullName>
        <label>Net ARR With PG Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_List_Price__c</fullName>
        <label>Net List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_Sell_Price__c</fullName>
        <label>Net Sell Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_One_time_Total_Bookings_Total_USGH__c</fullName>
        <label>One time Total Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Ordered_Qty__c</fullName>
        <description>Total number of Product ordered</description>
        <label>Ordered Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Product_Categories_Type_LOB_Family__c</fullName>
        <label>Product Categories (Type, LOB, Family)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Opp_ID__c</fullName>
        <label>Product Opp ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Order_Line_Num__c</fullName>
        <label>Sales Order Line Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Order_Num__c</fullName>
        <label>Sales Order Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Order_Type__c</fullName>
        <label>Sales Order Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Type__c</fullName>
        <description>What type of transaction is this Opportunity</description>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Service_Platform__c</fullName>
        <description>Defines what platform the Product belong to.</description>
        <label>Service Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS</fullName>
                </value>
                <value>
                    <fullName>LIV</fullName>
                </value>
                <value>
                    <fullName>TDH</fullName>
                </value>
                <value>
                    <fullName>INTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Ship_Date__c</fullName>
        <description>Date Product shipment occurs</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_to_Country__c</fullName>
        <description>Country listed on Shipping Address</description>
        <label>Ship to Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_to_State__c</fullName>
        <description>State listed on Shipping Address</description>
        <label>Ship to State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Start_Date__c</fullName>
        <description>Date Subscriptions start</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Unit_Sell_Price__c</fullName>
        <label>Unit Sell Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Upfront_Fee_Total_BookingsTotal_USGH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront Fee Total Bookings Total USGH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Launch_Status__c</fullName>
        <label>Launch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Launch_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Item_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Bookings__c</fullName>
        <description>Calculated from a flow &quot;Opportunity Product Flow&quot;</description>
        <label>Product Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Partner__c</fullName>
        <label>Vendor Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vendor_Partner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Only_Allowed_to_edit_Launch_fields</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
 $Profile.Name ==&apos;Sales Ops&apos; ,
 OR (ISCHANGED(UnitPrice),
 ISCHANGED(Quantity))
)</errorConditionFormula>
        <errorMessage>Sales Ops can only allowed to edit Launch Status and Launch Date fields</errorMessage>
    </validationRules>
</CustomObject>